change app name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "assistu",
+  "name": "AssistU",
   "version": "1.0.0",
   "description": "This is a web app where you can find workers for your basic household tasks online.",
   "main": "app.js",
