--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ejs": "^2.6.2",
     "express": "^4.17.1",
     "mongoose": "^5.6.5",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "surge": "^0.21.3"
   }
 }
