--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
 	"engines": {
 		"node": "10.16.0",
 		"npm": "6.9.0"
-	  },
+	},
 	"dependencies": {
 		"body-parser": "^1.19.0",
+		"db": "^1.1.1",
+		"dotenv": "^8.0.0",
 		"ejs": "^2.6.2",
 		"express": "^4.17.1",
 		"mongoose": "^5.6.5",
