--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"npm": "6.9.0"
 	},
 	"dependencies": {
+		"big-number": "^2.0.0",
 		"body-parser": "^1.19.0",
 		"db": "^1.1.1",
 		"dotenv": "^8.0.0",
