--- a/package.json
+++ b/package.json
@@ -22,9 +22,13 @@
 		"ejs": "^2.6.2",
 		"ejs-lint": "^0.3.0",
 		"express": "^4.17.1",
+		"express-session": "^1.16.2",
 		"lodash": "^4.17.15",
 		"mongoose": "^5.6.5",
 		"multer": "^1.4.2",
-		"nodemon": "^1.19.1"
+		"nodemon": "^1.19.1",
+		"passport": "^0.4.0",
+		"passport-local": "^1.0.0",
+		"passport-local-mongoose": "^5.0.1"
 	}
 }
