--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"author": "Vaibhav Srivastava and Kathy Lambert",
-	"license": "ISC",
+	"license": "MIT",
 	"engines": {
 		"node": "10.16.0",
 		"npm": "6.9.0"
@@ -16,7 +16,6 @@
 	"dependencies": {
 		"@fortawesome/fontawesome-svg-core": "^1.2.21",
 		"body-parser": "^1.19.0",
-		"db": "^1.1.1",
 		"dotenv": "^8.0.0",
 		"ejs": "^2.6.2",
 		"ejs-lint": "^0.3.0",
